Criacao das estruturas iniciais